# phoenix

./: .dockerignore  .gitignore  2024_news_summary.md  Dockerfile  README.md  config.example.yaml  extract_docx.py  full_test.txt  pyproject.toml  sched_result.txt  send_file_interactive.py  send_file_to_me.py  send_guide.md  send_to_dingtalk.py  send_to_zhanghseng.py  send_运维命令_dingtalk.py  t.txt  test_dingtalk_push.py  test_sched_out.txt  工作总结内容.txt  深圳五一周边游攻略.md  运维常用命令.txt
ai_news_notifier/: README.md  ai_news_bot.py  crontab_config.txt  install.sh  run_daily.sh
docs/: architecture.html
roles/: README.md  analyst.yaml  coder.yaml  devops.yaml  planner.yaml  researcher.yaml  reviewer.yaml  summarizer.yaml  tester.yaml  translator.yaml  writer.yaml
skills/code-review/: SKILL.yaml  prompt.md
skills/document-processor/: SKILL.yaml  prompt.md
skills/document-processor/tools/: doc_tools.py
skills/summarizer/: SKILL.yaml  prompt.md
skills/sysadmin/: SKILL.yaml  prompt.md
skills/translator/: SKILL.yaml  prompt.md
src/phoenix_agent/: __init__.py  __main__.py
src/phoenix_agent/channels/: __init__.py  base.py  dingtalk.py  dingtalk_openapi.py  qq.py  registry.py  server.py  telegram.py  wechat.py
src/phoenix_agent/cli/: __init__.py  interface.py  main.py
src/phoenix_agent/core/: __init__.py  agent.py  config.py  message.py  pool.py  scheduler.py  state.py
src/phoenix_agent/providers/: __init__.py  base.py  openai.py
src/phoenix_agent/skills/: __init__.py  manifest.py  registry.py  skill.py
src/phoenix_agent/tools/: __init__.py  builtin.py  (+1 more)
tests/: conftest.py  test_agent.py  test_channels.py  test_context.py  test_discover_models.py  test_memory.py  test_model_switch.py  test_multiagent.py  test_plan_mode.py  test_pool.py  test_scheduler.py  test_skills.py  test_web_search.py
(+6 files in other folders)
