[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-agent"
version = "1.0.0"
description = "Phoenix Agent - A lightweight, extensible AI agent framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Phoenix Team", email = "phoenix@example.com" }
]
license = { text = "MIT" }
keywords = ["ai", "agent", "llm", "tool-calling", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0,<2.0.0",
    "anthropic>=0.18.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "rich>=13.0.0,<14.0.0",
    "tenacity>=8.0.0,<9.0.0",
    "requests>=2.31.0,<3.0.0",
    "httpx>=0.25.0,<1.0.0",
    "tavily-python>=0.3.0,<1.0.0",
    # Channel runtime dependencies
    "aiohttp>=3.9.0,<4.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "starlette>=0.35.0,<1.0.0",
    "dingtalk-stream>=1.1.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.7.0,<2.0.0",
]
all = [
    "phoenix-agent[dev]",
]

[project.scripts]
phoenix = "phoenix_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
